--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta charset="UTF-8">
     <title>Inventory Management System for Hardware Commercial</title>
     <link rel="stylesheet" href="style1.css">
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-sm bg-dark">
-            <div class="container-fluid">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                </ul>
-                <a class="nav-link" href="#">DASHBOARD</a>
+
+            <ul class="navbar-nav flex gap-5">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">DASHBOARD</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">EMPLOYEE DATA</a>
@@ -29,10 +28,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">SETTINGS</a>
                 </li>
-                </ul>
-            </div>
+            </ul>
+
         </nav>
-        <button class="btnlogin-popup">Login</button>
+        <button class="btn login-popup">Login</button>
     </header>
     <div class="content">
 
@@ -41,7 +40,7 @@
         </span>
 
         <div class="Container mt-3">
-            <h2>TRY Login</h2>
+            <h2>Login</h2>
             <form action="/action_page.php">
                 <div class="mb-3 mt-3">
                     <label>Email</label>
@@ -69,9 +68,9 @@
 
             </form>
         </div>
-
+        <button onclick="hello()">test</button>
     </div>
-    <script src=""></script>
+    <script defer src="./index.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
